--- a/web/src/main/webapp/WEB-INF/templates/ordersCRMScreen_Hansontable.html
+++ b/web/src/main/webapp/WEB-INF/templates/ordersCRMScreen_Hansontable.html
@@ -68,10 +68,11 @@
 		        <option value="5">Giao hàng</option>
 		    </select>
 		    <br><br>
-		    <button onclick="saveStatus()">Lưu</button>
-		    <button onclick="closeModal()">Đóng</button>
+		    <button type="button" onclick="saveStatus()">Lưu</button>
+		    <button type="button" onclick="closeModalOrderStatus()">Đóng</button>
 		</div>
-		<div id="modalOverlay" onclick="closeModal()">
+		
+		<div id="modalOverlay">
 		</div>
 		
 		<!-- BEGIN UPDATE MODAL -->
