--- a/web/src/main/webapp/WEB-INF/templates/ordersCRMScreen_Datatable.html
+++ b/web/src/main/webapp/WEB-INF/templates/ordersCRMScreen_Datatable.html
@@ -44,7 +44,9 @@
 		<div class="row">
 			<div class="col-12">
 				<div class="order-screen-datatable">
+					<div class="table-responsive" style = "width: 100%">
 					<th:block th:include="fragments/orders/frg_datatable"></th:block>
+					</div>
 				</div>
 			</div>
 		</div>
