Change datatype of createdAt in Customer entity into Dates (@Temporal(TemporalType.DATE) private Date createdAt;)

--- a/web/src/main/webapp/WEB-INF/templates/customerListCRMScreen.html
+++ b/web/src/main/webapp/WEB-INF/templates/customerListCRMScreen.html
@@ -100,10 +100,6 @@
 							</div>
 						</div>
 
-						
-
-
-
 						<div class="card-content">
 							<div class="card-body">
 								<!-- Task List table -->
@@ -129,34 +125,32 @@
 													<div class="input-with-icon">
 														<input class="form-control" id="iconLeft" type="text"
 															placeholder="Tìm kiếm..." fdprocessedid="66aqzo">
-
 														<div class="icon-container">
 															<i class="fa fa-search"></i>
 														</div>
 													</div>
 													<!-- <input type="text" placeholder="Tìm kiếm..."> -->
 													<form>
-														<label> <input type="checkbox"
-															id="filter-option-1" data-target="#responsible-select">
-															Người phụ trách
-														</label> <select id="responsible-select" class="hidden-select">
+														<label> 
+															<input type="checkbox" id="filter-option-1" data-target="#responsible-select">Người phụ trách
+														</label> 
+														<select id="responsible-select" class="hidden-select">
 															<option value="">Chọn người phụ trách</option>
 															<option value="1">Lê Ngọc Thạch</option>
 															<option value="2">Nguyễn Hoàng Phương Ngân</option>
 															<option value="3">Nguyễn Thế Thành</option>
-														</select> <label> <input type="checkbox"
-															id="filter-option-2"
-															data-target="#company-name, #company-address">
-															Thông tin công ty
-														</label> <input id="company-name" class="hidden-select"
-															type="text" placeholder="Tìm kiếm tên công ty"> <input
-															id="company-address" class="hidden-select" type="text"
-															placeholder="Tìm kiếm địa chỉ công ty"> <label>
-															<input type="checkbox" id="filter-option-3"
-															data-target="#representative-name"> Tên người đại
-															diện
-														</label> <input id="representative-name" class="hidden-select"
-															type="text" placeholder="Tìm kiếm tên người đại diện">
+														</select>
+														 
+														<label> 
+															<input type="checkbox" id="filter-option-2" data-target="#company-name, #company-address"> Thông tin công ty
+														</label> 
+														<input id="company-name" class="hidden-select" type="text" placeholder="Tìm kiếm tên công ty"> 
+														<input id="company-address" class="hidden-select" type="text" placeholder="Tìm kiếm địa chỉ công ty"> 
+														
+														<label>
+															<input type="checkbox" id="filter-option-3" data-target="#representative-name"> Tên người đại diện
+														</label> 
+														<input id="representative-name" class="hidden-select" type="text" placeholder="Tìm kiếm tên người đại diện">
 
 														<label> <input type="checkbox"
 															id="filter-option-4" data-target="#email"> Email
