--- a/web/src/main/webapp/WEB-INF/templates/fragments/orderDetailModal.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/orderDetailModal.html
@@ -33,7 +33,7 @@
 				    <div class="form-row">
 				        <div class="form-group col-md-6">
 				            <label for="goodsType">Loại hàng hóa</label>
-				            <input type="text" class="form-control" id="orderGoodsDetail" style="background-color: white; color: black;" readonly>
+				            <select class="form-control" id="orderGoodsDetail" style="background-color: white; color: black;" readonly></select>
 				        </div>
 				        <div class="form-group col-md-6">
 				            <label for="transportMethod">Phương tiện vận chuyển</label>
@@ -49,15 +49,15 @@
 			            <table class="sender-table">
 			                <tr>
 			                    <td>Họ tên:</td>
-			                    <td><input type="text" class="input-container" id="orderCustomerName" readonly/></td>
+			                    <td><select class="form-control" id="orderSenderName" style="background-color: white; color: black;" readonly></select>
 			                </tr>
 			                <tr>
 			                    <td>SDT:</td>
-			                    <td><input type="text" class="input-container" id= "orderCustomerPhone" placeholder="(+84) 1234567890" readonly /></td>
+			                    <td><input type="text" class="input-container" id= "orderSenderPhone" placeholder="(+84) 1234567890" readonly /></td>
 			                </tr>
 			                <tr>
 			                    <td>Email:</td>
-			                    <td><input type="email" class="input-container" readonly /></td>
+			                    <td><input type="text" class="input-container" id= "orderSenderEmail" readonly /></td>
 			                </tr>
 			            </table>
 			        </fieldset>
