--- a/web/src/main/webapp/WEB-INF/templates/ordersCRMScreen_Datatable.html
+++ b/web/src/main/webapp/WEB-INF/templates/ordersCRMScreen_Datatable.html
@@ -75,7 +75,11 @@
 		<!-- BEGIN ORDER DETAIL MODAL -->
 		<th:block th:include="fragments/orderDetailModal"></th:block>
 		<!-- END ORDER DETAIL MODAL -->
-		
+
+		<!-- BEGIN ORDER DETAIL MODAL TO UPDATE -->
+		<th:block th:include="fragments/orderDetailModal_ToUpdate"></th:block>
+		<!-- END ORDER DETAIL MODAL TO UPDATE -->
+				
 	</div>
 	<!-- END CONTENT -->
 	
