--- a/web/src/main/webapp/WEB-INF/templates/ordersCRMScreen_Datatable.html
+++ b/web/src/main/webapp/WEB-INF/templates/ordersCRMScreen_Datatable.html
@@ -69,16 +69,16 @@
 		</div>
 		
 		<!-- BEGIN UPDATE MODAL -->
+		<th:block th:include="fragments/createOrderModal"></th:block>
+		<!-- END UPDATE MODAL -->
+		
+		<!-- BEGIN UPDATE MODAL -->
 		<th:block th:include="fragments/updateOrderModal"></th:block>
 		<!-- END UPDATE MODAL -->
 		
 		<!-- BEGIN ORDER DETAIL MODAL -->
 		<th:block th:include="fragments/orderDetailModal"></th:block>
 		<!-- END ORDER DETAIL MODAL -->
-
-		<!-- BEGIN ORDER DETAIL MODAL TO UPDATE -->
-		<th:block th:include="fragments/orderDetailModal_ToUpdate"></th:block>
-		<!-- END ORDER DETAIL MODAL TO UPDATE -->
 				
 	</div>
 	<!-- END CONTENT -->
