feat: add "Profession" table and sample data for new database
- Add `Profession` table
- Update data display on customer detail page
- Add sample data file for testing on new database (doc/design)

--- a/web/src/main/webapp/WEB-INF/templates/addCustomer.html
+++ b/web/src/main/webapp/WEB-INF/templates/addCustomer.html
@@ -70,7 +70,9 @@
 										<label for="profession">Ngành Nghề:</label> <select
 											class="form-control" id="profession" name="profession">
 											<option value="">Chọn Ngành Nghề</option>
-											
+											<th:block th:each="profession : ${professions}">
+												<option th:value="${profession.id}" th:text="${profession.name}"></option>
+											</th:block>
 										</select>
 									</div>
 
