Continue updating "Update Order Datatable".

--- a/web/src/main/webapp/WEB-INF/templates/fragments/updateOrderModal.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/updateOrderModal.html
@@ -56,11 +56,11 @@
 			                </tr>
 			                <tr>
 			                    <td>SDT:</td>
-			                    <td><input type="text" class="input-container" id= "orderSenderPhoneUpdate" placeholder="(+84) 1234567890"  /></td>
+			                    <td><input type="text" class="input-container" id= "orderSenderPhoneUpdate" placeholder="(+84) 1234567890" readonly /></td>
 			                </tr>
 			                <tr>
 			                    <td>Email:</td>
-			                    <td><input type="text" class="input-container" id= "orderSenderEmailUpdate"  /></td>
+			                    <td><input type="text" class="input-container" id= "orderSenderEmailUpdate" readonly /></td>
 			                </tr>
 			            </table>
 			        </fieldset>
