--- a/web/src/main/webapp/WEB-INF/templates/fragments/orderDetailModal.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/orderDetailModal.html
@@ -49,15 +49,15 @@
 			            <table class="sender-table">
 			                <tr>
 			                    <td>Họ tên:</td>
-			                    <td><select class="form-control" id="orderSenderName" style="background-color: white; color: black;" readonly></select>
+			                    <td><select class="form-control" id="orderSenderNameDetail" style="background-color: white; color: black;" readonly></select>
 			                </tr>
 			                <tr>
 			                    <td>SDT:</td>
-			                    <td><input type="text" class="input-container" id= "orderSenderPhone" placeholder="(+84) 1234567890" readonly /></td>
+			                    <td><input type="text" class="input-container" id= "orderSenderPhoneDetail" placeholder="(+84) 1234567890" readonly /></td>
 			                </tr>
 			                <tr>
 			                    <td>Email:</td>
-			                    <td><input type="text" class="input-container" id= "orderSenderEmail" readonly /></td>
+			                    <td><input type="text" class="input-container" id= "orderSenderEmailDetail" readonly /></td>
 			                </tr>
 			            </table>
 			        </fieldset>
