--- a/web/src/main/webapp/WEB-INF/templates/fragments/createOrderModal.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/createOrderModal.html
@@ -22,13 +22,17 @@
 			
 			<div class="form-row">
 			    <div class="form-group col-md-6">
-			      <label for="inputState">Trạng thái</label>
-					<select id="orderStatusCreate" class="form-control" style="background-color: white; color: black;" >
-					</select>					
-			    </div>
-			    <div class="form-group col-md-6">
 			      <label for="orderCodeUpdateInput">Mã đơn hàng</label>
 			      <input type="text" class="form-control" id=orderCodeInputCreate style="background-color: white; color: black;" >
+			    </div>
+			     <div class="form-group col-md-6">
+					<label for="goodsType">Loại đơn hàng</label>
+		            <select class="form-control" id="orderGoodsCreate" style="background-color: white; color: black;" >
+		            	<th:block th:each="goodsCategory : ${listGoodsCategories}">
+		            		<option th:value="${goodsCategory.id}" th:text="${goodsCategory.name}">
+		            		</option>
+		            	</th:block>
+		            </select>				
 			    </div>
 			</div>
 	    	
@@ -44,20 +48,37 @@
 				            </select>
 				        </div>
 				        <div class="form-group col-md-6">
-				            <label for="transportMethod">Phương tiện vận chuyển</label>
-				            <input type="text" class="form-control" id="orderTransportCreate" style="background-color: white; color: black;" >
+				            <label for="inputState">Trạng thái</label>
+							<select id="orderStatusCreate" class="form-control" style="background-color: white; color: black;" >
+							</select>
 				        </div>
 				    </div>
 		    </div>
 		    
-		    <!-- <div class="container">
+		    <br/><div class="row2">
+		    	<div class="form-row">
+			        <div class="form-group col-md-6">
+			            <label for="transportMethod">Phương tiện vận chuyển</label>
+			            <input type="text" class="form-control" id="orderTransportCreate" style="background-color: white; color: black;" >
+			        </div>
+			    </div>
+		   		</div>
+		    
+		   <div class="container">
 				<div class="column">
 			        <fieldset>
 			            <legend>Thông tin người gửi</legend>
 			            <table class="sender-table">
 			                <tr>
 			                    <td>Họ tên:</td>
-			                    <td><select class="form-control" id="orderSenderNameCreate" style="background-color: white; color: black;" ></select>
+			                    <td>
+			                    	<select class="form-control" id="orderSenderNameCreate" style="background-color: white; color: black; width: 100%;">
+	                               		<th:block th:each="customer : ${listCustomers}">
+											<option th:value="${customer.id}" th:text="${customer.contactPerson}">
+											</option>
+										</th:block>
+	                               </select>
+			                    </td>
 			                </tr>
 			                <tr>
 			                    <td>SDT:</td>
@@ -77,7 +98,14 @@
 				            <table class="receiver-table">
 				                <tr>
 				                    <td>Họ tên:</td>
-				                    <td><input type="text" class="input-container" /></td>
+				                  	<td>
+				                  		<select class="form-control" id="orderReceiverNameCreate" style="background-color: white; color: black; width: 100%;">
+		                               		<th:block th:each="customer : ${listCustomers}">
+												<option th:value="${customer.id}" th:text="${customer.contactPerson}">
+												</option>
+											</th:block>
+	                               		</select>
+				                  	</td>
 				                </tr>
 				                <tr>
 				                    <td>SDT:</td>
@@ -90,7 +118,7 @@
 				            </table>
 				        </fieldset>
 				</div>
-		</div> -->
+		</div>
 	        
 	        <!-- <div class="row2">
 	        	<div class="form-row">
