--- a/web/src/main/webapp/WEB-INF/templates/fragments/updateOrderModal.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/updateOrderModal.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <body>
 	<div id="updateOrderModal">
-		<h3>ID của đơn hàng <span id="orderIdUpdate"></span></h3>
+		<!-- <h3>ID của đơn hàng: <span id="orderIdUpdate"></span></h3> -->
 		<h3 id="title">Cập nhật đơn hàng <span id="orderCodeUpdate"></span></h3>
 		<div class="closeBtnDiv" style="text-align: right;">
 			<button onclick="closeUpdateOrderModal()" class="closeBtn"><i class="fas fa-times"></i></button>
